# tinyecs

./: .gitignore  .travis.yml  Cargo.toml  README.md  index.html  search-index.js
examples/: multiple_fields.rs  parallel_rendering.rs  process_macro.rs  process_types.rs  render_gui_system.rs  serialization.rs  spawn_system.rs  systems.rs
src/: aspect.rs  component.rs  entity.rs  fast_dict.rs  lib.rs  serialization.rs  system.rs  world.rs  world_data.rs
src/tinyprof/: lib.rs.html  profiler_frame.rs.html  profiler_state.rs.html
src/vec_map/: lib.rs.html
tests/: remove.rs
tinyecs/: index.html  macro.aspect_all!.html  macro.register_system!.html  macro.transit_sync_system!.html  macro.transit_system!.html  macro.transit_with_data_system!.html  sidebar-items.js  struct.Aspect.html  struct.ComponentGuard.html  struct.DataList.html  struct.Entity.html  struct.EntityManager.html  struct.World.html  struct.WorldHandle.html  trait.Component.html  trait.System.html
tinyecs/aspect/: sidebar-items.js  struct.Aspect.html
tinyecs/component/: sidebar-items.js  trait.Component.html
tinyprof/: fn.profiler_next_frame.html  fn.profiler_report.html  fn.state_report.html  index.html  macro.print_region_time!.html  macro.profile_region!.html  sidebar-items.js  struct.PROFILER_STATE.html  struct.ProfilerCounter.html  struct.ProfilerFrame.html  struct.ProfilerRegion.html  struct.ProfilerReport.html  struct.ProfilerState.html
vec_map/: struct.Drain.html  struct.IntoIter.html  struct.Iter.html  struct.IterMut.html  struct.Keys.html  struct.Values.html
(+46 files in other folders)
